Opened 14 years ago

Closed 14 years ago

#1490 closed defect (fixed)

Infinity loop / lock in export image

Reported by: klaasje Owned by:
Priority: important Component: ffmpeg
Version: git-master Keywords: regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
FFMPEG stays in loop and creates 10000000 jpg files.

I have had this with several files, I'll include a sample file in this post!

How to reproduce:

/usr/local/bin/ffmpeg -sameq -i /root/sample.avi -vframes 300 /root/zzzz%03d.jpg

ffmpeg version N-41291-g02ff89a Copyright (c) 2000-2012 the FFmpeg developers
  built on Jun  4 2012 21:54:54 with gcc 4.1.2 20080704 (Red Hat 4.1.2-52)
  configuration: --enable-gpl --enable-libmp3lame --enable-libtheora --enable-libvo-aacenc --enable-libvorbis --enable-libvpx --enable-libxvid --enable-libfaac --enable-libx264 --enable-version3 --enable-nonfree
  libavutil      51. 56.100 / 51. 56.100
  libavcodec     54. 23.100 / 54. 23.100
  libavformat    54.  6.101 / 54.  6.101
  libavdevice    54.  0.100 / 54.  0.100
  libavfilter     2. 78.100 /  2. 78.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, matroska,webm, from '/root/sample.avi':
  Metadata:
    creation_time   : 2007-10-25 08:24:40
  Duration: 00:01:02.15, start: 0.000000, bitrate: 98 kb/s
    Stream #0:0(eng): Video: h264 (High), yuv420p, 1280x544, SAR 1:1 DAR 40:17, 23.98 fps, 23.98 tbr, 1k tbn, 47.95 tbc (default)
    Stream #0:1(eng): Audio: ac3, 48000 Hz, 5.1(side), s16, 640 kb/s (default)
    Stream #0:2(eng): Subtitle: text (default)
[buffer @ 0x1b905160] w:1280 h:544 pixfmt:yuv420p tb:1/1000 sar:1/1 sws_param:flags=2
[ffmpeg_buffersink @ 0x1b904dc0] No opaque field provided
[format @ 0x1b9050c0] auto-inserting filter 'auto-inserted scaler 0' between the filter 'Parsed_null_0' and the filter 'format'
[auto-inserted scaler 0 @ 0x1b8e5600] w:1280 h:544 fmt:yuv420p sar:1/1 -> w:1280 h:544 fmt:yuvj420p sar:1/1 flags:0x4
Output #0, image2, to '/root/zzzz%03d.jpg':
  Metadata:
    creation_time   : 2007-10-25 08:24:40
    encoder         : Lavf54.6.101
    Stream #0:0(eng): Video: mjpeg, yuvj420p, 1280x544 [SAR 1:1 DAR 40:17], q=2-31, 200 kb/s, 90k tbn, 23.98 tbc (default)
Stream mapping:
  Stream #0:0 -> #0:0 (h264 -> mjpeg)
Press [q] to stop, [?] for help
DTS 18446744073708, next:-708 st:0 invalid dropping
PTS 18446744073792, next:-708 invalid dropping st:0
DTS 18446744073750, next:40292 st:0 invalid dropping
PTS 18446744073750, next:40292 invalid dropping st:0
DTS 18446744073792, next:81292 st:0 invalid dropping
PTS 18446744073834, next:81292 invalid dropping st:0

Attachments (1)

sample.avi (750.0 KB ) - added by klaasje 14 years ago.

Download all attachments as: .zip

Change History (3)

by klaasje, 14 years ago

Attachment: sample.avi added

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedFFmpeg
Keywords: regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Regression since 3ba90d9.

comment:2 by Michael Niedermayer, 14 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.