ffmpeg: revert 3ba90d9 (cosmetics to reduce difference to qatar by about 90 lines)

This commit caused Ticket1490 (Infinity loop / lock in export image)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>